# manual-coding-challenge

./: .gitignore  app.py  idontknow.py  pyproject.toml  readme.md  shenanigans.py  todo.json  todocli.py
